Translate and update styles

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru-UA">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,7 +15,7 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- Хедер -->
+    <!-- Header -->
 
     <header class="header">
       <div class="container">
@@ -26,7 +26,7 @@
               class="burger"
               width="40"
               height="40"
-              aria-label="Переключатель мобильного меню"
+              aria-label="mobile menu switcher"
             >
               <use
                 class="icon-menu"
@@ -43,13 +43,13 @@
           <nav class="navigation">
             <ul class="site-nav list">
               <li class="item">
-                <a class="link current" href="./index.html">Студия</a>
+                <a class="link current" href="./index.html">Studio</a>
               </li>
               <li class="item">
-                <a class="link" href="./portfolio.html">Портфолио</a>
+                <a class="link" href="./portfolio.html">Portfolio</a>
               </li>
               <li class="item">
-                <a class="link" href="#contacts">Контакты</a>
+                <a class="link" href="#contacts">Contacts</a>
               </li>
             </ul>
           </nav>
@@ -80,18 +80,18 @@
     </header>
 
     <main>
-      <!-- Герой -->
+      <!-- Hero -->
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button class="button" data-modal-open>Заказать услугу</button>
+          <h1 class="hero-title">Effective solutions for your business</h1>
+          <button class="button" data-modal-open>Order a service</button>
         </div>
       </section>
 
-      <!-- Преимущества -->
+      <!-- Advantages -->
       <section class="benefit section">
         <div class="container">
-          <h2 class="visually-hidden">Наши преимущества</h2>
+          <h2 class="visually-hidden">Our advantages</h2>
           <!-- <ul class="benefit list">
             <li class="benefit-item">
               <svg class="benefit-icon">
@@ -116,31 +116,27 @@
           </ul> -->
           <ul class="list flex">
             <li class="item">
-              <h3 class="title">Внимание к деталям</h3>
+              <h3 class="title">Keep an eye on details</h3>
               <p class="desc">
-                Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
+                Smart solutions, as well as the beginning of daily work on position building.
               </p>
             </li>
             <li class="item">
-              <h3 class="title">Пунктуальность</h3>
+              <h3 class="title">Punctuality</h3>
               <p class="desc">
-                Задача оргинизации, в особенности же рамки и место обучения
-                кадров влечет за собой.
+                We prioritizes punctuality as a core value to ensure timely delivery and exceed customer expectations.
               </p>
             </li>
             <li class="item">
-              <h3 class="title">Планирование</h3>
+              <h3 class="title">Planning</h3>
               <p class="desc">
-                Равным образом консультация с широким активом в значительной
-                степени обуславливает.
+                Emphasizes effective planning to ensure seamless execution of projects and meet our customers' needs with precision.
               </p>
             </li>
             <li class="item">
-              <h3 class="title">Современные технологии</h3>
+              <h3 class="title">Modern Technologies</h3>
               <p class="desc">
-                Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий.
+                Our teem leverages modern technologies to enhance our operations and deliver innovative solutions to our customers.
               </p>
             </li>
           </ul>
@@ -150,7 +146,7 @@
       <!-- Чем занимаемся -->
       <section class="work section">
         <div class="container">
-          <h2 class="section-title">Чем мы занимаемся</h2>
+          <h2 class="section-title">What we do?</h2>
           <ul class="work list flex">
             <li class="work-item">
               <img
@@ -159,9 +155,9 @@
                 srcset="./img/works/desktop/code@2x.jpg 2x"
                 width="370"
                 height="294"
-                alt="Десктопные приложения"
+                alt="Desktop applications"
               />
-              <p class="work-label">Десктопные приложения</p>
+              <p class="work-label">Desktop Applications</p>
             </li>
             <li class="work-item">
               <img
@@ -170,9 +166,9 @@
                 srcset="./img/works/desktop/mobile@2x.jpg 2x"
                 width="370"
                 height="294"
-                alt="Мобильные приложения"
+                alt="Mobile Applications"
               />
-              <p class="work-label">Мобильные приложения</p>
+              <p class="work-label">Mobile Applications</p>
             </li>
             <li class="work-item">
               <img
@@ -181,9 +177,9 @@
                 srcset="./img/works/desktop/grafic@2x.jpg 2x"
                 width="370"
                 height="294"
-                alt="Дизайнерские решения"
+                alt="Design Solutions"
               />
-              <p class="work-label">Дизайнерские решения</p>
+              <p class="work-label">Design Solutions</p>
             </li>
           </ul>
         </div>
@@ -192,7 +188,7 @@
       <!-- Команда -->
       <section class="team section">
         <div class="container">
-          <h2 class="section-title">Наша команда</h2>
+          <h2 class="section-title">Our team</h2>
           <ul class="team-list list flex">
             <li class="team-member">
               <picture>
@@ -221,11 +217,11 @@
                   class="photo"
                   src="./img/comand/desktop/igor-270.jpg"
                   width="450"
-                  alt="Игорь Демьяненко"
+                  alt="Ihor Demianenko"
                 />
               </picture>
 
-              <h3 class="name">Игорь Демьяненко</h3>
+              <h3 class="name">Ihor Demianenko</h3>
               <p class="position" lang="en">Product Designer</p>
               <ul class="social-list list flex">
                 <li>
@@ -309,11 +305,11 @@
                   class="photo"
                   src="./img/comand/desktop/olga-270.jpg"
                   width="450"
-                  alt="Ольга Репина"
+                  alt="Olha Riepina"
                 />
               </picture>
 
-              <h3 class="name">Ольга Репина</h3>
+              <h3 class="name">Olha Riepina</h3>
               <p class="position" lang="en">Frontend Developer</p>
               <ul class="social-list list flex">
                 <li>
@@ -397,10 +393,10 @@
                   class="photo"
                   src="./img/comand/desktop/nikolay-270.jpg"
                   width="450"
-                  alt="Николай Тарасов"
+                  alt="Mykola Tarasov"
                 />
               </picture>
-              <h3 class="name">Николай Тарасов</h3>
+              <h3 class="name">Mykola Tarasov</h3>
               <p class="position" lang="en">Marketing</p>
               <ul class="social-list list flex">
                 <li>
@@ -484,10 +480,10 @@
                   class="photo"
                   src="./img/comand/desktop/mihail-270.jpg"
                   width="450"
-                  alt="Михаил Ермаков"
+                  alt="Mukhaylo Podoliak"
                 />
               </picture>
-              <h3 class="name">Михаил Ермаков</h3>
+              <h3 class="name">Mukhaylo Podoliak</h3>
               <p class="position" lang="en">UI Designer</p>
               <ul class="social-list list flex">
                 <li>
@@ -551,7 +547,7 @@
       <!-- Постоянные клиенты -->
       <section class="clients section">
         <div class="container">
-          <h2 class="section-title">Постоянные клиенты</h2>
+          <h2 class="section-title">Long-standing clients</h2>
           <ul class="clients-list list">
             <li class="item">
               <a href="#" class="clients-link">
@@ -600,7 +596,7 @@
       </section>
     </main>
 
-    <!-- Футер -->
+    <!-- Footer -->
     <footer class="footer">
       <div class="container footer-container">
         <div class="adress-social-wrap">
@@ -608,7 +604,7 @@
             <p class="logo"><span class="logo-blue">Web</span>Studio</p>
             <address class="adress">
               <ul class="adress-list list" id="contacts">
-                <li class="adress-item">г. Киев, пр-т Леси Украинки, 26</li>
+                <li class="adress-item">Kyiv, av. Lesi Ukraiynky, 26</li>
                 <li class="adress-item">
                   <a class="adress-link" href="mailto:info@devstudio.com"
                     >info@devstudio.com</a
@@ -623,7 +619,7 @@
             </address>
           </div>
           <div class="social-list-wrap">
-            <p class="social-title">присоединяйтесь</p>
+            <p class="social-title">Join us</p>
             <ul class="social-list list flex">
               <li>
                 <a
@@ -681,7 +677,7 @@
           </div>
         </div>
         <div class="submit-container">
-          <p class="social-title">Подпишитесь на рассылку</p>
+          <p class="social-title">Subscribe</p>
           <div class="submit-wrap">
             <form action="#" class="submit">
               <input
@@ -692,7 +688,7 @@
               />
               <button class="btn-submit button">
                 <span class="btn-submit-wrap">
-                  Подписаться<svg class="submit-icon" width="24" height="24">
+                  Get a subscribtion<svg class="submit-icon" width="24" height="24">
                     <use href="./img/icons/sprite.svg#icon-icon-send"></use>
                   </svg>
                 </span>
@@ -703,7 +699,7 @@
       </div>
     </footer>
 
-    <!-- Модальное окно -->
+    <!-- Modal -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="btn-close" data-modal-close>
@@ -711,10 +707,10 @@
             <use href="./img/icons/sprite.svg#icon-close-btn"></use>
           </svg>
         </button>
-        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+        <p class="modal-title">Leave your contacts and we'll call you back</p>
         <form class="form">
           <div class="field">
-            <label for="user-name" class="field-title">Имя</label>
+            <label for="user-name" class="field-title">Name</label>
             <div class="input-wrap">
               <input type="text" class="input-field" id="user-name" />
               <svg class="field-icon">
@@ -723,7 +719,7 @@
             </div>
           </div>
           <div class="field">
-            <label for="user-phone" class="field-title">Телефон</label>
+            <label for="user-phone" class="field-title">Phone</label>
             <div class="input-wrap">
               <input type="text" class="input-field" id="user-phone" />
               <svg class="field-icon">
@@ -732,7 +728,7 @@
             </div>
           </div>
           <div class="field">
-            <label for="user-mail" class="field-title">Почта</label>
+            <label for="user-mail" class="field-title">E-mail</label>
             <div class="input-wrap">
               <input type="text" class="input-field" id="user-mail" />
               <svg class="field-icon">
@@ -741,7 +737,7 @@
             </div>
           </div>
           <div class="textarea">
-            <label for="comment" class="field-title">Комментарий</label>
+            <label for="comment" class="field-title">Message</label>
             <textarea id="comment" placeholder="Введите текст"></textarea>
           </div>
           <div class="checkbox-wrap">
@@ -749,12 +745,12 @@
               <input type="checkbox" id="sign" class="checkbox" />
               <span class="check-icon"></span>
               <span class="agreement-text"
-                >Соглашаюсь с рассылкой и принимаю&nbsp;</span
+                >I agree to the subscription&nbsp;</span
               >
-              <a href="#" class="agreement-link">Условия договора</a>
+              <a href="#" class="agreement-link">terms and conditions</a>
             </label>
           </div>
-          <button class="modal-button button">Отправить</button>
+          <button class="modal-button button">Send</button>
         </form>
       </div>
     </div>
