--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
               class="burger"
               width="40"
               height="40"
-              aria-label="Переключатель мобильного меню"
+              aria-label="mobile menu switcher"
             >
               <use
                 class="icon-menu"
@@ -42,20 +42,20 @@
           <nav class="navigation">
             <ul class="site-nav list">
               <li class="item">
-                <a class="link" href="./index.html">Студия</a>
+                <a class="link" href="./index.html">Studio</a>
               </li>
               <li class="item">
-                <a class="link current" href="./portfolio.html">Портфолио</a>
+                <a class="link current" href="./portfolio.html">Portfolio</a>
               </li>
               <li class="item">
-                <a class="link" href="#contacts">Контакты</a>
+                <a class="link" href="#contacts">Contacts</a>
               </li>
             </ul>
           </nav>
           <div class="contacts">
             <ul class="contacts-list list">
               <li class="item">
-                <a class="link" href="mailto:info@devstudio.com">
+                <a class="link mail" href="mailto:info@devstudio.com">
                   <svg class="mail-icon" width="12">
                     <use href="./img/icons/sprite.svg#icon-contacts-mail"></use>
                   </svg>
@@ -81,18 +81,18 @@
     <main>
       <section class="works-examples section">
         <div class="container">
-          <h1 class="visually-hidden">Примеры работ</h1>
-          <!-- Фильтры -->
+          <h1 class="visually-hidden">Work examples</h1>
+          <!-- Filters -->
           <div class="filters">
             <ul class="filters-list list">
-              <li><button class="button">Все</button></li>
-              <li><button class="button">Веб-сайты</button></li>
-              <li><button class="button">Приложения</button></li>
-              <li><button class="button">Дизайн</button></li>
-              <li><button class="button">Маркетинг</button></li>
+              <li><button class="button">All</button></li>
+              <li><button class="button">Web-sites</button></li>
+              <li><button class="button">Applications</button></li>
+              <li><button class="button">Design</button></li>
+              <li><button class="button">Marketing</button></li>
             </ul>
           </div>
-          <!-- Примеры работ -->
+          <!-- Work examples -->
           <div class="examples-container">
             <ul class="examples list flex">
               <li class="examples-item">
@@ -124,19 +124,21 @@
                         class="photo"
                         src="./img/portfolio/desktop/techno.jpg"
                         width="450"
-                        alt="Технокряк"
+                        alt="Technocrack"
                       />
                     </picture>
                     <p class="examples-desc">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
+                      The quick brown fox jumps over the lazy dog, but the dog
+                      didn't seem to mind. He was too busy dreaming about bacon,
+                      and chasing squirrels in his sleep. The fox thought he was
+                      pretty clever, but he know that the dog was
+                      just biding his time, waiting for the perfect moment to
+                      strike.
                     </p>
                   </div>
                   <div class="border">
-                    <h2 class="examples-title">Технокряк</h2>
-                    <p class="type">Веб-сайт</p>
+                    <h2 class="examples-title">Technocrack</h2>
+                    <p class="type">Web-site</p>
                   </div>
                 </a>
               </li>
@@ -169,21 +171,23 @@
                         class="photo"
                         src="./img/portfolio/desktop/ball.jpg"
                         width="450"
-                        alt="Постер New Orlean vs Golden Star"
+                        alt="Poster New Orlean vs Golden Star"
                       />
                     </picture>
                     <p class="examples-desc">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
+                      The quick brown fox jumps over the lazy dog, but the dog
+                      didn't seem to mind. He was too busy dreaming about bacon,
+                      and chasing squirrels in his sleep. The fox thought he was
+                      pretty clever, but he know that the dog was
+                      just biding his time, waiting for the perfect moment to
+                      strike.
                     </p>
                   </div>
                   <div class="border">
                     <h2 class="examples-title">
-                      Постер New Orlean vs Golden Star
+                      Poster New Orlean vs Golden Star
                     </h2>
-                    <p class="type">Дизайн</p>
+                    <p class="type">Design</p>
                   </div>
                 </a>
               </li>
@@ -216,19 +220,21 @@
                         class="photo"
                         src="./img/portfolio/desktop/seafood.jpg"
                         width="450"
-                        alt="Ресторан Seafood"
+                        alt="Seafood"
                       />
                     </picture>
                     <p class="examples-desc">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
+                      The quick brown fox jumps over the lazy dog, but the dog
+                      didn't seem to mind. He was too busy dreaming about bacon,
+                      and chasing squirrels in his sleep. The fox thought he was
+                      pretty clever, but he know that the dog was
+                      just biding his time, waiting for the perfect moment to
+                      strike.
                     </p>
                   </div>
                   <div class="border">
-                    <h2 class="examples-title">Ресторан Seafood</h2>
-                    <p class="type">Приложение</p>
+                    <h2 class="examples-title">Restaurant Seafood</h2>
+                    <p class="type">Applications</p>
                   </div>
                 </a>
               </li>
@@ -261,19 +267,21 @@
                         class="photo"
                         src="./img/portfolio/desktop/prime.jpg"
                         width="450"
-                        alt="Проект Prime"
+                        alt="Progect Prime"
                       />
                     </picture>
                     <p class="examples-desc">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
+                      The quick brown fox jumps over the lazy dog, but the dog
+                      didn't seem to mind. He was too busy dreaming about bacon,
+                      and chasing squirrels in his sleep. The fox thought he was
+                      pretty clever, but he know that the dog was
+                      just biding his time, waiting for the perfect moment to
+                      strike.
                     </p>
                   </div>
                   <div class="border">
-                    <h2 class="examples-title">Проект Prime</h2>
-                    <p class="type">Маркетинг</p>
+                    <h2 class="examples-title">Project Prime</h2>
+                    <p class="type">Marketing</p>
                   </div>
                 </a>
               </li>
@@ -307,19 +315,21 @@
                         class="photo"
                         src="./img/portfolio/desktop/boxes.jpg"
                         width="450"
-                        alt="Проект Boxes"
+                        alt="Project Boxes"
                       />
                     </picture>
                     <p class="examples-desc">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
+                      The quick brown fox jumps over the lazy dog, but the dog
+                      didn't seem to mind. He was too busy dreaming about bacon,
+                      and chasing squirrels in his sleep. The fox thought he was
+                      pretty clever, but he know that the dog was
+                      just biding his time, waiting for the perfect moment to
+                      strike.
                     </p>
                   </div>
                   <div class="border">
-                    <h2 class="examples-title">Проект Boxes</h2>
-                    <p class="type">Приложение</p>
+                    <h2 class="examples-title">Project Boxes</h2>
+                    <p class="type">Applications</p>
                   </div>
                 </a>
               </li>
@@ -356,15 +366,17 @@
                       />
                     </picture>
                     <p class="examples-desc">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
+                      The quick brown fox jumps over the lazy dog, but the dog
+                      didn't seem to mind. He was too busy dreaming about bacon,
+                      and chasing squirrels in his sleep. The fox thought he was
+                      pretty clever, but he know that the dog was
+                      just biding his time, waiting for the perfect moment to
+                      strike.
                     </p>
                   </div>
                   <div class="border">
                     <h2 class="examples-title">Inspiration has no Borders</h2>
-                    <p class="type">Веб-сайт</p>
+                    <p class="type">Web-sites</p>
                   </div>
                 </a>
               </li>
@@ -397,19 +409,21 @@
                         class="photo"
                         src="./img/portfolio/desktop/limited.jpg"
                         width="450"
-                        alt="Издание Limited Edition"
+                        alt="Print Limited Edition"
                       />
                     </picture>
                     <p class="examples-desc">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
+                      The quick brown fox jumps over the lazy dog, but the dog
+                      didn't seem to mind. He was too busy dreaming about bacon,
+                      and chasing squirrels in his sleep. The fox thought he was
+                      pretty clever, but he know that the dog was
+                      just biding his time, waiting for the perfect moment to
+                      strike.
                     </p>
                   </div>
                   <div class="border">
-                    <h2 class="examples-title">Издание Limited Edition</h2>
-                    <p class="type">Дизайн</p>
+                    <h2 class="examples-title">Print Limited Edition</h2>
+                    <p class="type">Design</p>
                   </div>
                 </a>
               </li>
@@ -442,19 +456,21 @@
                         class="photo"
                         src="./img/portfolio/desktop/lab.jpg"
                         width="450"
-                        alt="Проект LAB"
+                        alt="Project LAB"
                       />
                     </picture>
                     <p class="examples-desc">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
+                      The quick brown fox jumps over the lazy dog, but the dog
+                      didn't seem to mind. He was too busy dreaming about bacon,
+                      and chasing squirrels in his sleep. The fox thought he was
+                      pretty clever, but he know that the dog was
+                      just biding his time, waiting for the perfect moment to
+                      strike.
                     </p>
                   </div>
                   <div class="border">
-                    <h2 class="examples-title">Проект LAB</h2>
-                    <p class="type">Маркетинг</p>
+                    <h2 class="examples-title">Project LAB</h2>
+                    <p class="type">Marketing</p>
                   </div>
                 </a>
               </li>
@@ -491,15 +507,17 @@
                       />
                     </picture>
                     <p class="examples-desc">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
+                      The quick brown fox jumps over the lazy dog, but the dog
+                      didn't seem to mind. He was too busy dreaming about bacon,
+                      and chasing squirrels in his sleep. The fox thought he was
+                      pretty clever, but he know that the dog was
+                      just biding his time, waiting for the perfect moment to
+                      strike.
                     </p>
                   </div>
                   <div class="border">
                     <h2 class="examples-title">Growing Business</h2>
-                    <p class="type">Приложение</p>
+                    <p class="type">Applications</p>
                   </div>
                 </a>
               </li>
@@ -509,7 +527,7 @@
       </section>
     </main>
 
-    <!-- Футер -->
+    <!-- Footer -->
     <footer class="footer">
       <div class="container footer-container">
         <div class="adress-social-wrap">
@@ -517,7 +535,7 @@
             <p class="logo"><span class="logo-blue">Web</span>Studio</p>
             <address class="adress">
               <ul class="adress-list list" id="contacts">
-                <li class="adress-item">г. Киев, пр-т Леси Украинки, 26</li>
+                <li class="adress-item">Kyiv, av. Lesi Ukraiynky, 26</li>
                 <li class="adress-item">
                   <a class="adress-link" href="mailto:info@devstudio.com"
                     >info@devstudio.com</a
@@ -532,7 +550,7 @@
             </address>
           </div>
           <div class="social-list-wrap">
-            <p class="social-title">присоединяйтесь</p>
+            <p class="social-title">Join us</p>
             <ul class="social-list list flex">
               <li>
                 <a
@@ -590,7 +608,7 @@
           </div>
         </div>
         <div class="submit-container">
-          <p class="social-title">Подпишитесь на рассылку</p>
+          <p class="social-title">Subscribe</p>
           <div class="submit-wrap">
             <form action="#" class="submit">
               <input
@@ -601,7 +619,7 @@
               />
               <button class="btn-submit button">
                 <span class="btn-submit-wrap">
-                  Подписаться<svg class="submit-icon" width="24" height="24">
+                  Get a subscribtion<svg class="submit-icon" width="24" height="24">
                     <use href="./img/icons/sprite.svg#icon-icon-send"></use>
                   </svg>
                 </span>
